realizado jquery, aún falta realizar el responsive

--- a/styles.sass
+++ b/styles.sass
@@ -10,8 +10,9 @@ html
 			width: 20%
 			height: 100%
 			position: fixed
+			z-index: 2
 			div
-				height: 70%
+				height: 75%
 				img
 					width: 70%
 					margin: 15% 15% 15% 15%
@@ -26,9 +27,13 @@ html
 						margin: .5em 15%
 						color: #774D2A
 						font-weight: 900
+						&:hover
+							color: #CDAF66
+							cursor: hand
+							cursor: pointer
 			.redes
 				width: 70%
-				height: 30%
+				height: 25%
 				margin: 0 15%
 				display: flex
 				justify-content: space-between
@@ -36,6 +41,10 @@ html
 					align-self: center
 					font-size: 28px
 					color: #774D2A
+					&:hover
+						color: #CDAF66
+						cursor: hand
+						cursor: pointer
 		header
 			width: 80%
 			margin-left: 20%
@@ -43,6 +52,9 @@ html
 			flex-direction: row-reverse
 			height: 100%
 			background-image: url("img/cafe-header.jpg")
+			background-attachment: fixed
+			background-size: cover
+			background-position: 150px 0
 			h1
 				-webkit-margin-before: 0
 				-webkit-margin-after: 0
@@ -71,7 +83,17 @@ html
 			.fotosCafe
 				display: flex
 				justify-content: center
-				margin-bottom: 100px
+				align-items: center
+				margin-bottom: 50px
+				.lugar
+					display: flex
+					align-items: flex-end
+					justify-content: center
+					p
+						font-family: 'Satisfy', cursive
+						display: none
+						font-size: 30px
+						font-weight: 700
 				.colombiano
 					background-image: url("img/colombiano.jpg")
 					width: 210px
@@ -94,7 +116,17 @@ html
 			background-size: cover
 			background-attachment: fixed
 			display: flex
+			flex-wrap: wrap
 			align-items: flex-end
+			.contenedorFrappe
+				height: 75%
+				position: relative
+				display: flex
+				align-self: flex-start
+				#frappe
+					position: absolute
+					height: 100%
+					z-index: 1
 			article
 				display: flex
 				background-color: rgba(250, 250, 250, 0.5)
@@ -140,6 +172,25 @@ html
 					p
 						font-size: 18px
 						margin: 20px
+		.carrusel
+			width: 80%
+			margin-left: 20%
+			height: 95%
+			display: flex
+			justify-content: space-between
+			background-image: url('img/carrusel3.jpg')
+			background-repeat: no-repeat
+			background-size: cover
+			.flechas
+				width: 10%
+				height: 100%
+				background-color: rgba(239, 239, 239, .4)
+				font-size: 34px
+				display: flex
+				justify-content: center
+				align-items: center
+				cursor: hand
+				cursor: pointer
 		footer
 			width: 80%
 			margin-left: 20%
