--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,10 @@ html {
       background-color: #EFEFEF;
       width: 20%;
       height: 100%;
-      position: fixed; }
+      position: fixed;
+      z-index: 2; }
       html body nav div {
-        height: 70%; }
+        height: 75%; }
         html body nav div img {
           width: 70%;
           margin: 15% 15% 15% 15%; }
@@ -26,9 +27,13 @@ html {
             margin: 0.5em 15%;
             color: #774D2A;
             font-weight: 900; }
+            html body nav div ul li:hover {
+              color: #CDAF66;
+              cursor: hand;
+              cursor: pointer; }
       html body nav .redes {
         width: 70%;
-        height: 30%;
+        height: 25%;
         margin: 0 15%;
         display: flex;
         justify-content: space-between; }
@@ -36,13 +41,20 @@ html {
           align-self: center;
           font-size: 28px;
           color: #774D2A; }
+          html body nav .redes span:hover {
+            color: #CDAF66;
+            cursor: hand;
+            cursor: pointer; }
     html body header {
       width: 80%;
       margin-left: 20%;
       display: flex;
       flex-direction: row-reverse;
       height: 100%;
-      background-image: url("img/cafe-header.jpg"); }
+      background-image: url("img/cafe-header.jpg");
+      background-attachment: fixed;
+      background-size: cover;
+      background-position: 150px 0; }
       html body header h1, html body header h4 {
         -webkit-margin-before: 0;
         -webkit-margin-after: 0;
@@ -70,7 +82,17 @@ html {
       html body .tiposCafe .fotosCafe {
         display: flex;
         justify-content: center;
-        margin-bottom: 100px; }
+        align-items: center;
+        margin-bottom: 50px; }
+        html body .tiposCafe .fotosCafe .lugar {
+          display: flex;
+          align-items: flex-end;
+          justify-content: center; }
+          html body .tiposCafe .fotosCafe .lugar p {
+            font-family: "Satisfy", cursive;
+            display: none;
+            font-size: 30px;
+            font-weight: 700; }
         html body .tiposCafe .fotosCafe .colombiano, html body .tiposCafe .fotosCafe .etiope, html body .tiposCafe .fotosCafe .brasileno, html body .tiposCafe .fotosCafe .ecuatoriano {
           background-image: url("img/colombiano.jpg");
           width: 210px;
@@ -90,7 +112,17 @@ html {
       background-size: cover;
       background-attachment: fixed;
       display: flex;
+      flex-wrap: wrap;
       align-items: flex-end; }
+      html body .seccionFrappe .contenedorFrappe {
+        height: 75%;
+        position: relative;
+        display: flex;
+        align-self: flex-start; }
+        html body .seccionFrappe .contenedorFrappe #frappe {
+          position: absolute;
+          height: 100%;
+          z-index: 1; }
       html body .seccionFrappe article {
         display: flex;
         background-color: rgba(250, 250, 250, 0.5); }
@@ -135,6 +167,25 @@ html {
           html body .bolsa article .bolsaLorem p {
             font-size: 18px;
             margin: 20px; }
+    html body .carrusel {
+      width: 80%;
+      margin-left: 20%;
+      height: 95%;
+      display: flex;
+      justify-content: space-between;
+      background-image: url("img/carrusel3.jpg");
+      background-repeat: no-repeat;
+      background-size: cover; }
+      html body .carrusel .flechas {
+        width: 10%;
+        height: 100%;
+        background-color: rgba(239, 239, 239, 0.4);
+        font-size: 34px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: hand;
+        cursor: pointer; }
     html body footer {
       width: 80%;
       margin-left: 20%;
