--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 html {
-  height: 100%; }
+  height: 100%;
+  overflow-x: hidden; }
   html body {
     margin: 0;
     height: 100%;
@@ -120,6 +121,7 @@ html {
         display: flex;
         align-self: flex-start; }
         html body .seccionFrappe .contenedorFrappe #frappe {
+          display: none;
           position: absolute;
           height: 100%;
           z-index: 1; }
