--- a/styles.sass
+++ b/styles.sass
@@ -1,5 +1,6 @@
 html
 	height: 100%
+	overflow-x: hidden
 	body
 		margin: 0
 		height: 100%
@@ -124,6 +125,7 @@ html
 				display: flex
 				align-self: flex-start
 				#frappe
+					display: none
 					position: absolute
 					height: 100%
 					z-index: 1
