--- a/styles.sass
+++ b/styles.sass
@@ -8,7 +8,7 @@ html
 		flex-wrap: wrap
 		nav
 			background-color: #EFEFEF
-			width: 20%
+			width: 20vw
 			height: 100%
 			position: fixed
 			z-index: 2
@@ -48,7 +48,7 @@ html
 						cursor: hand
 						cursor: pointer
 		header
-			width: 80%
+			width: 80vw
 			margin-left: 20%
 			height: 100%
 			background-image: url("img/cafe-header.jpg")
@@ -67,17 +67,18 @@ html
 				text-align: center
 			h4
 				@extend h1
-				line-height: 26px
+				line-height: .8em
 				width: .5em
 				word-wrap: break-word
 				font-size: 32px
 				float: right
-				margin: 3% 3%
+				margin: 3%
 				font-weight: 400
+				display: block
 			.delAmor
 				margin-right: 5%
 		.tiposCafe
-			width: 80%
+			width: 80vw
 			margin-left: 20%
 			height: 70%
 			h2
@@ -96,6 +97,9 @@ html
 					display: flex
 					align-items: flex-end
 					justify-content: center
+					width: 210px
+					height: 210px
+					background-size: cover
 					p
 						font-family: 'Satisfy', cursive
 						display: none
@@ -103,23 +107,18 @@ html
 						font-weight: 700
 				.colombiano
 					background-image: url("img/colombiano.jpg")
-					width: 210px
-					height: 210px
-					background-size: cover
+					
 				.etiope
-					@extend .colombiano
 					background-image: url("img/etiope.jpg")
 				.brasileno
-					@extend .colombiano
 					background-image: url("img/brasileno.jpg")
 				.ecuatoriano
 					background-image: url("img/ecuatoriano.jpg")
-					@extend .colombiano
 		.tiposCafe2
 			display: none
 		.seccionFrappe
 			background-image: url("img/cafetero.jpg")
-			width: 80%
+			width: 80vw
 			margin-left: 20%
 			height: 90%
 			background-size: cover
@@ -151,7 +150,7 @@ html
 					width: 75%
 					height: 25%
 		.bolsa
-			width: 80%
+			width: 80vw
 			margin-left: 20%
 			height: 80%
 			align-items: center
@@ -183,7 +182,7 @@ html
 						font-size: 18px
 						margin: 20px
 		.carrusel
-			width: 80%
+			width: 80vw
 			margin-left: 20%
 			height: 95%
 			display: flex
@@ -202,7 +201,7 @@ html
 				cursor: hand
 				cursor: pointer
 		footer
-			width: 80%
+			width: 80vw
 			margin-left: 20%
 			height: 12%
 			background-color: black
@@ -212,13 +211,12 @@ html
 			a
 				text-decoration: none
 				color: white
-
-@media only screen and ( max-width: 900px)
+@media only screen and (max-width: 1200px) and (orientation: portrait)
 	html
 		body
 			nav
 				div
-					height: 60%
+					height: 50%
 					img
 						margin: 5%
 						width: 90%
@@ -227,6 +225,68 @@ html
 				.redes
 					flex-direction: column
 					height: 40%
+					span
+						font-size: 55px
+			header
+				height: 90%
+				h1
+					font-size: 72px
+				h4
+					font-size: 50px
+					margin: 10% 4%
+				.delAmor
+					margin-right: 6%
+			.tiposCafe
+				h2
+					padding-bottom: 1.1em
+				.fotosCafe
+					justify-content: center
+					flex-wrap: wrap
+					.lugar
+						margin: 0 auto
+						width: 300px
+						height: 300px
+					.ecuatoriano
+						padding-right: 25px
+					.brasileno
+						padding-right: 25px
+					.colombiano
+						padding-left: 25px
+					.etiope
+						padding-left: 25px
+			.seccionFrappe
+				display: none
+			.bolsa
+				width: 100%
+				margin-left: 20%
+				height: 40%
+				align-items: center
+				display: flex
+				justify-content: center
+				article
+					width: 100%
+					height: 100%
+					.bolsaImg
+						display: none
+					.bolsaLorem
+						width: 100%
+						height: 100%
+						display: block
+						.hablemos
+							height: 20%
+							display: flex
+							align-items: center
+							justify-content: center
+							h5			
+								-webkit-margin-before: 0
+								-webkit-margin-after: 0
+						p
+							font-size: 24px
+							margin: 25px
+							height: initial
+@media only screen and (max-width: 900px) and (orientation: portrait)
+	html
+		body
 			header
 				height: 90%
 				h4
@@ -264,36 +324,6 @@ html
 					background-image: url("img/ecuatoriano2.jpg")
 			.seccionFrappe
 				display: none
-			.bolsa
-				width: 100%
-				margin-left: 20%
-				height: 80%
-				align-items: center
-				display: flex
-				justify-content: center
-				article
-					width: 100%
-					height: 100%
-					.bolsaImg
-						display: none
-					.bolsaLorem
-						width: 100%
-						height: 100%
-						display: block
-						.hablemos
-							height: 20%
-							display: flex
-							align-items: center
-							justify-content: center
-							h5			
-								-webkit-margin-before: 0
-								-webkit-margin-after: 0
-						p
-							font-size: 18px
-							margin: 0 10px
-							height: 80%
-						.none
-							display: none
 			.carrusel
 				display: none
 			footer
