--- a/styles.css
+++ b/styles.css
@@ -325,5 +325,74 @@ html {
     margin: 0;
     justify-content: center;
     display: flex; } }
+@media only screen and (max-width: 450px) and (orientation: portrait) {
+  html body nav {
+    width: 17vw; }
+    html body nav .redes span {
+      font-size: 25px; }
+  html body header {
+    width: 83vw;
+    margin-left: 17vw; }
+  html body .tiposCafe {
+    width: 83vw;
+    margin-left: 17vw; }
+  html body .bolsa {
+    width: 83vw;
+    margin-left: 17vw;
+    height: 42%; }
+    html body .bolsa article .bolsaLorem .hablemos h5 {
+      font-size: 20px; }
+    html body .bolsa article .bolsaLorem p {
+      font-size: 13px;
+      margin: 15px; }
+    html body .bolsa article .bolsaLorem .none {
+      display: none; }
+  html body footer {
+    width: 83vw;
+    margin-left: 17vw; }
+    html body footer a {
+      font-size: 13px; } }
+@media only screen and (max-width: 800px) and (orientation: landscape) {
+  html body nav div ul {
+    margin: 0; }
+  html body header h4 {
+    display: none; }
+  html body .tiposCafe h2 {
+    font-size: 30px; }
+  html body .tiposCafe .fotosCafe .lugar {
+    width: 120px;
+    height: 120px; }
+  html body .seccionFrappe {
+    display: none; }
+  html body .bolsa {
+    width: 80vw;
+    margin-left: 20%;
+    height: 100%;
+    align-items: center;
+    display: flex;
+    justify-content: center; }
+    html body .bolsa article {
+      width: 100%;
+      height: 100%; }
+      html body .bolsa article .bolsaImg {
+        display: none; }
+      html body .bolsa article .bolsaLorem {
+        width: 100%;
+        height: 100%;
+        display: block; }
+        html body .bolsa article .bolsaLorem .hablemos {
+          height: 20%;
+          display: flex;
+          align-items: center;
+          justify-content: center; }
+          html body .bolsa article .bolsaLorem .hablemos h5 {
+            -webkit-margin-before: 0;
+            -webkit-margin-after: 0; }
+        html body .bolsa article .bolsaLorem p {
+          font-size: 20px;
+          margin: 5px 25px 25px 25px;
+          height: initial; }
+        html body .bolsa article .bolsaLorem .none {
+          display: none; } }
 
 /*# sourceMappingURL=styles.css.map */
