--- a/styles.sass
+++ b/styles.sass
@@ -334,3 +334,85 @@ html
 				margin: 0
 				justify-content: center
 				display: flex
+@media only screen and (max-width: 450px) and (orientation: portrait)
+	html
+		body
+			nav
+				width: 17vw
+				.redes
+					span
+						font-size: 25px
+			header
+				width: 83vw
+				margin-left: 17vw
+			.tiposCafe
+				width: 83vw
+				margin-left: 17vw
+			.bolsa
+				width: 83vw
+				margin-left: 17vw
+				height: 42%
+				article
+					.bolsaLorem
+						.hablemos
+							h5
+								font-size: 20px
+						p
+							font-size: 13px
+							margin: 15px
+						.none
+							display: none
+			footer
+				width: 83vw
+				margin-left: 17vw
+				a
+					font-size: 13px
+@media only screen and (max-width: 800px) and (orientation: landscape)
+	html
+		body
+			nav
+				div
+					ul
+						margin: 0
+			header
+				h4
+					display: none
+			.tiposCafe
+				h2
+					font-size: 30px
+				.fotosCafe
+					.lugar
+						width: 120px
+						height: 120px
+			.seccionFrappe
+				display: none
+			.bolsa
+				width: 80vw
+				margin-left: 20%
+				height: 100%
+				align-items: center
+				display: flex
+				justify-content: center
+				article
+					width: 100%
+					height: 100%
+					.bolsaImg
+						display: none
+					.bolsaLorem
+						width: 100%
+						height: 100%
+						display: block
+						.hablemos
+							height: 20%
+							display: flex
+							align-items: center
+							justify-content: center
+							h5			
+								-webkit-margin-before: 0
+								-webkit-margin-after: 0
+						p
+							font-size: 20px
+							margin: 5px 25px 25px 25px
+							height: initial
+						.none
+							display: none
